<resources>
    <string name="app_name">SmashYourPhone</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Custom Strings -->
    <string name="settings_title">Settings</string>
    <string name="empty_string" />
    <string name="share_title">Share</string>
    <string name="home_title">Home</string>
    <string name="bar_app_title_style">bold</string>
    <string name="home_bn_help_text">Help</string>
    <string name="home_bn_start_text">Start</string>
    <string name="char_select_text">Select your character...</string>
    <string name="char_marmot_name">Screaming Marmot</string>
    <string name="char_marmot_intro">A marmot that screams like human.</string>
    <string name="char_giraffe_name">Awkward Giraffe</string>
    <string name="char_giraffe_intro">A giraffe that yells awkwardly.</string>
    <string name="char_emu_name">Oofing Emu</string>
    <string name="char_emu_intro">An emu that oofs.</string>
    <string name="char_bn_confirm_text">Confirm</string>
    <string name="char_bn_prev_text"><![CDATA[< Prev]]></string>
    <string name="char_bn_next_text"><![CDATA[Next >]]></string>
    <string name="play_title">Relieve your stress...</string>
    <string name="play_score">Score: </string>
    <string name="play_score_initial">0</string>
    <string name="play_pause">Pause</string>
    <string name="play_help">Help</string>
    <string name="play_restart">Restart</string>
    <string name="play_resume">Resume</string>
    <string name="home_bn_exit_text">Exit</string>
    <string name="settings_general_title">General Settings</string>
    <string name="settings_lang">Language</string>
    <string name="settings_info_title">App Information</string>
    <string name="settings_help">Help</string>
    <string name="settings_about">About</string>
    <string name="lang_title">Language</string>
    <string name="vw_back_arrow">Back Arrow</string>
    <string name="lang_all_title">Available Languages</string>
    <string name="lang_en">English</string>
    <string name="about_ver_info">Version Information</string>
    <string name="ver_curr">Current Version</string>
    <string name="ver_curr_val">[version]</string>
    <string name="help_howto">How to play ?</string>
    <string name="howto_title">Triggering character video or audio effects...</string>
    <string name="howto_content">
    1. Start, select character, and then confirm.
    2. Swing, drop, or shake the phone. Or, alternatively, click on the character.
    3. The effects will take place. Do not forget to turn up the volume to hear the audio effect!
    </string>
    <string name="share_title2">Share this game...</string>
    <string name="share_title3">Share Game</string>
    <string name="share_file_location">Image saved to:</string>
</resources>
