<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/layout_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/bar_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:theme="@style/AppTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:id="@+id/layout_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="@dimen/screen_boundary_size"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="@dimen/screen_boundary_size"
                android:gravity="center"
                android:orientation="horizontal"
                android:overScrollMode="never"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                android:scrollbars="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ic_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/eff_bn_app_bar"
                    android:clickable="true"
                    android:contentDescription="@string/home_title"
                    android:focusable="true"
                    android:onClick="icHomeClicked"
                    android:padding="@dimen/bar_app_ic_padding"
                    android:scaleType="center"
                    android:scaleX="@dimen/bar_app_ic_scale_x"
                    android:scaleY="@dimen/bar_app_ic_scale_y"
                    app:srcCompat="@drawable/ic_home_clickable_48dp" />

                <View
                    android:id="@+id/vw_divider"
                    style="@style/VerticalDivider"
                    android:layout_width="@dimen/bar_app_divider_size" />

                <TextView
                    android:id="@+id/txt_app_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/colorAppBarText"
                    android:textSize="@dimen/bar_app_title_size"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <ImageView
                    android:id="@+id/ic_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/eff_bn_app_bar"
                    android:clickable="true"
                    android:contentDescription="@string/sharing_title"
                    android:focusable="true"
                    android:padding="@dimen/bar_app_ic_padding"
                    android:scaleType="center"
                    android:scaleX="@dimen/bar_app_ic_scale_x"
                    android:scaleY="@dimen/bar_app_ic_scale_y"
                    app:srcCompat="@drawable/ic_share_disabled_48dp" />

                <ImageView
                    android:id="@+id/ic_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:background="@drawable/eff_bn_app_bar"
                    android:clickable="true"
                    android:contentDescription="@string/settings_title"
                    android:focusable="true"
                    android:padding="@dimen/bar_app_ic_padding"
                    android:scaleType="center"
                    android:scaleX="@dimen/bar_app_ic_scale_x"
                    android:scaleY="@dimen/bar_app_ic_scale_y"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/ic_settings_selected_48dp" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/ic_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/eff_bn_round_activity"
            android:clickable="true"
            android:contentDescription="@string/vw_back_arrow"
            android:focusable="true"
            android:onClick="icBackArrowClicked"
            android:padding="@dimen/bar_app_ic_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bar_app"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_arrow_back_white_48dp" />

        <TextView
            android:id="@+id/txt_about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/settings_about"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ic_back_arrow"
            app:layout_constraintTop_toTopOf="@+id/ic_back_arrow"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/vw_divider2"
            style="@style/HorizontalDivider"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_back_arrow"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt_ver_info"
            style="@style/SettingsCategory"
            android:text="@string/about_ver_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vw_divider2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/ver_curr"
            style="@style/SettingsItem"
            android:onClick="aboutVerCurrClicked"
            android:text="@string/ver_curr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_ver_info"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/ver_curr_val"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/settings_item_height"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:gravity="right|center_vertical|end"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/ver_curr_val"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/ver_curr"
            app:layout_constraintTop_toTopOf="@+id/ver_curr"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
