<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/layout_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/bar_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:id="@+id/layout_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="@dimen/screen_boundary_size"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="@dimen/screen_boundary_size"
                android:gravity="center"
                android:orientation="horizontal"
                android:overScrollMode="never"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                android:scrollbars="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/ic_home"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/eff_bn_bar_clickable"
                    android:contentDescription="@string/home_title"
                    android:onClick="icHomeClicked"
                    android:padding="@dimen/bar_app_ic_padding"
                    android:scaleX="@dimen/bar_app_ic_scale_x"
                    android:scaleY="@dimen/bar_app_ic_scale_y"
                    app:srcCompat="@drawable/ic_home_clickable_48dp" />

                <View
                    android:id="@+id/vw_divider"
                    style="@style/VerticalDivider"
                    android:layout_width="@dimen/bar_app_divider_size" />

                <TextView
                    android:id="@+id/txt_app_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/colorAppBarText"
                    android:textSize="@dimen/bar_app_title_size"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <ImageButton
                    android:id="@+id/ic_share"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAppBarDisabledBG"
                    android:contentDescription="@string/sharing_title"
                    android:padding="@dimen/bar_app_ic_padding"
                    android:scaleX="@dimen/bar_app_ic_scale_x"
                    android:scaleY="@dimen/bar_app_ic_scale_y"
                    app:srcCompat="@drawable/ic_share_disabled_48dp" />

                <ImageButton
                    android:id="@+id/ic_settings"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:background="@drawable/eff_bn_bar_clickable"
                    android:contentDescription="@string/settings_title"
                    android:onClick="icSettingsClicked"
                    android:padding="@dimen/bar_app_ic_padding"
                    android:scaleType="center"
                    android:scaleX="@dimen/bar_app_ic_scale_x"
                    android:scaleY="@dimen/bar_app_ic_scale_y"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/ic_settings_clickable_48dp" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/text_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/char_select_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bar_app"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/vw_divider_2"
            style="@style/HorizontalDivider"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_select"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/vw_char"
            android:layout_width="@dimen/char_vw_size"
            android:layout_height="@dimen/char_vw_size"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/char_marmot_name"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vw_divider_2"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_char_marmot" />

        <TextView
            android:id="@+id/txt_char_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/char_marmot_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vw_char"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/vw_divider_3"
            style="@style/HorizontalDivider"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_char_name"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt_char_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center|top"
            android:text="@string/char_marmot_intro"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vw_divider_3"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/bn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="@drawable/eff_bn_activity"
            android:onClick="bnConfirmClicked"
            android:text="@string/char_bn_confirm_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_char_intro"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/bn_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/eff_bn_activity"
            android:onClick="bnPrevClicked"
            android:text="@string/char_bn_prev_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bn_confirm"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bn_confirm"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/bn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/eff_bn_activity"
            android:onClick="bnNextClicked"
            android:text="@string/char_bn_next_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/bn_confirm"
            app:layout_constraintTop_toTopOf="@+id/bn_confirm"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>